--- a/src/components/cards/cardcategories.module.css
+++ b/src/components/cards/cardcategories.module.css
@@ -5,7 +5,8 @@
     gap: 15px 0;
 }
 .list li{
-    font-size: 14px;
+    font-size: 23px;
+    font-weight: 700;
     color: white;
     cursor: pointer;
 }
